syntax = "proto3";
package dydxprotocol.indexer.redis;

import "dydxprotocol/indexer/protocol/v1/clob.proto";

// RedisOrder is a proto for orders stored in Redis. This proto holds some
// human-readable values such as price, size and ticker as well as the original
// `Order` proto from the dYdX application.
message RedisOrder {
  // uuid of the Order generated by the Indexer based on the `OrderId`.
  string id = 1;

  // Order proto from the protocol.
  dydxprotocol.indexer.protocol.v1.IndexerOrder order = 2;

  // Ticker for the exchange pair for the order.
  string ticker = 3;

  // Type of the ticker, PERPETUAL or SPOT.
  TickerType ticker_type = 4;

  // Human-readable price of the order.
  string price = 5;

  // Human-readable size of the order.
  string size = 6;

  // Enum for the ticker type, PERPETUAL or SPOT.
  enum TickerType {
    // Default value for the enum. Should never be used in an initialized
    // `RedisOrder`.
    TICKER_TYPE_UNSPECIFIED = 0;

    // Ticker is for a perpetual pair.
    TICKER_TYPE_PERPETUAL = 1;

    // Ticker is for a spot pair.
    TICKER_TYPE_SPOT = 2;
  }
}
